[gd_scene load_steps=2 format=3 uid="uid://jhdlqsokif5o"]

[ext_resource type="Script" path="res://lobby.gd" id="1"]

[node name="Lobby" type="VBoxContainer" node_paths=PackedStringArray("persona_name", "player_name", "error_label", "host", "address", "lobby_container", "steam_connect", "steam_players", "enet_address_entry", "enet_start_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1")
persona_name = NodePath("TabContainer/Steam/Connect/VBoxContainer/Persona Name")
player_name = NodePath("Name")
error_label = NodePath("TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/ErrorLabel")
host = NodePath("TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/Host")
address = NodePath("TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/LobbyId")
lobby_container = NodePath("TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/ScrollContainer/HBoxContainer/LobbyName")
steam_connect = NodePath("TabContainer/Steam/Connect")
steam_players = NodePath("TabContainer/Steam/Players")
enet_address_entry = NodePath("TabContainer/ENet/Players/MarginContainer/VBoxContainer/Address")
enet_start_button = NodePath("TabContainer/ENet/Players/MarginContainer/VBoxContainer/Start")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = "Player Name:"

[node name="Name" type="LineEdit" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = "The Warrior"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="ENet" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Players" type="PanelContainer" parent="TabContainer/ENet"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -95.0
offset_right = 201.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/ENet/Players"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/ENet/Players/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="TabContainer/ENet/Players/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ENet Connection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="Button" parent="TabContainer/ENet/Players/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="TabContainer/ENet/Players/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Address" type="LineEdit" parent="TabContainer/ENet/Players/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP Address to Join"
alignment = 1

[node name="Start" type="Button" parent="TabContainer/ENet/Players/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Start Game"

[node name="Steam" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Players" type="Panel" parent="TabContainer/Steam"]
visible = false
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Steam/Players"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -48.5
offset_right = 80.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2

[node name="SteamList" type="ItemList" parent="TabContainer/Steam/Players/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Spacer2" type="Label" parent="TabContainer/Steam/Players/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Menu" type="HBoxContainer" parent="TabContainer/Steam/Players/VBoxContainer"]
layout_mode = 2

[node name="Spacer4" type="Button" parent="TabContainer/Steam/Players/VBoxContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
disabled = true
flat = true

[node name="SteamBack" type="Button" parent="TabContainer/Steam/Players/VBoxContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Exit"

[node name="Spacer" type="Button" parent="TabContainer/Steam/Players/VBoxContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
disabled = true
flat = true

[node name="SteamStart" type="Button" parent="TabContainer/Steam/Players/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Start"

[node name="Spacer2" type="Button" parent="TabContainer/Steam/Players/VBoxContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
disabled = true
flat = true

[node name="SteamKick" type="Button" parent="TabContainer/Steam/Players/VBoxContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Kick"

[node name="Spacer3" type="Button" parent="TabContainer/Steam/Players/VBoxContainer/Menu"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
disabled = true
flat = true

[node name="SteamLobbyID" type="LineEdit" parent="TabContainer/Steam/Players/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Lobby ID"
editable = false

[node name="SteamSpacer" type="Label" parent="TabContainer/Steam/Players/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="SteamLabel" type="Label" parent="TabContainer/Steam/Players/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Awaiting Players..."

[node name="Connect" type="Panel" parent="TabContainer/Steam"]
unique_name_in_owner = true
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Steam/Connect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Persona Name" type="Label" parent="TabContainer/Steam/Connect/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Steam/Connect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="LobbyId" type="LineEdit" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
placeholder_text = "Lobby Id/Name Here"
caret_blink = true

[node name="Host" type="Button" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Host"

[node name="Refresh" type="Button" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh
"

[node name="Join" type="Button" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="Back" type="Button" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="ErrorLabel" type="Label" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.820312, 0.291595, 0.291595, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LobbyName" type="ItemList" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
allow_reselect = true
auto_height = true
item_count = 1

[node name="Players" type="ItemList" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(38, 80)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 2
allow_reselect = true
auto_height = true
item_count = 1

[node name="ID" type="ItemList" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
allow_reselect = true
auto_height = true
item_count = 1

[node name="VScrollBar" type="VScrollBar" parent="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[connection signal="pressed" from="TabContainer/ENet/Players/MarginContainer/VBoxContainer/Host" to="." method="_on_enet_host_pressed"]
[connection signal="pressed" from="TabContainer/ENet/Players/MarginContainer/VBoxContainer/Join" to="." method="_on_enet_join_pressed"]
[connection signal="pressed" from="TabContainer/ENet/Players/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TabContainer/Steam/Players/VBoxContainer/Menu/SteamBack" to="." method="_on_back_pressed"]
[connection signal="pressed" from="TabContainer/Steam/Players/VBoxContainer/Menu/SteamStart" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TabContainer/Steam/Players/VBoxContainer/Menu/SteamKick" to="." method="_on_steam_kick_pressed"]
[connection signal="gui_input" from="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/LobbyId" to="." method="_on_lobby_id_gui_input"]
[connection signal="text_changed" from="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/LobbyId" to="." method="_on_lobby_id_text_changed"]
[connection signal="text_submitted" from="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/LobbyId" to="." method="_on_lobby_id_text_submitted"]
[connection signal="pressed" from="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/Refresh" to="." method="_request_lobby_list"]
[connection signal="pressed" from="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="item_activated" from="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/ScrollContainer/HBoxContainer/LobbyName" to="." method="_on_lobby_name_item_activated"]
[connection signal="item_clicked" from="TabContainer/Steam/Connect/VBoxContainer/HBoxContainer/ScrollContainer/HBoxContainer/ID" to="." method="_on_id_item_clicked"]
